# arc-coder-oa-codex

./: GETTING_STARTED.md  README.md  model_registry.yaml  pyproject.toml  readme.md
.github/workflows/: test.yml
arc/: __init__.py  browser_worker.py  cli.py  codex_engine.py  insight_worker.py  mcp_gateway.py  model_router.py  plan_loader.py  rate_limiter.py  sandbox_runner.py
examples/: hello_plan.md
faker/: __init__.py
playwright/: __init__.py
playwright/sync_api/: __init__.py
redis/: __init__.py
tests/: test_browser_worker.py  test_cli.py  test_db_manager.py  test_model_router.py  test_plan_loader.py  test_rate_limiter.py
todo_app/: README.md  __init__.py  db_manager.py  main.py  requirements.txt  setup.py
typer/: __init__.py
typer/testing/: __init__.py
yaml/: __init__.py
